네이버추가

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<link rel="stylesheet" href="style.css" />
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-600ef8f0ba7de3f5"></script>
+		<meta name="naver-site-verification" content="027b602b6d12eaf5c33f30f5d7dd32473d3f384b" />
 
 	</head>
 
