--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 			integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
 			crossorigin="anonymous"
 		/>
-		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 		<title>WebtoonFace</title>
 		<link rel="stylesheet" href="style.css" />
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
@@ -41,10 +40,10 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Home</a>
+							<a class="nav-link active" aria-current="page" href="#">나와 닮은 캐릭터</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Link</a>
+						<li class="nav-item active">
+							<a class="nav-link" id="website-top-link "href="https://webtoonface.netlify.app/#">나와 닮은 웹툰 캐릭터</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a
