--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 			integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
 			crossorigin="anonymous"
 		/>
-		<title>WebtoonFace</title>
+		<title>나와 닮은 웹툰 캐릭터 찾기</title>
+		 <meta name="description" content="나와 닮은 웹툰 캐릭터는 누구일까? 사진 한장으로 나와 닮은 웹툰 캐릭터를 찾아봐요! 많은 네이버 인기작 웹툰 캐릭터중 나는 누구와 닮았을지 확인해봐요!">
+    
+    <meta property="og:title" content="나와 닮은 웹툰 캐릭터 찾기">
+    <meta property="og:description" content="나와 닮은 웹툰 캐릭터는 누구일까? 사진 한장으로 나와 닮은 웹툰 캐릭터를 찾아봐요! 많은 네이버 인기작 웹툰 캐릭터중 나는 누구와 닮았을지 확인해봐요!">
+    <meta property="og:url" content="https://webtoonface.netlify.app/">
 		<link rel="stylesheet" href="style.css" />
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
 		<script
