--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
 			crossorigin="anonymous"
 		/>
 		<title>나와 닮은 웹툰 캐릭터 찾기</title>
-		 <meta name="description" content="나와 닮은 웹툰 캐릭터는 누구일까? 사진 한장으로 나와 닮은 웹툰 캐릭터를 찾아봐요! 많은 네이버 인기작 웹툰 캐릭터중 나는 누구와 닮았을지 확인해봐요!">
-    
-    <meta property="og:title" content="나와 닮은 웹툰 캐릭터 찾기">
-    <meta property="og:description" content="나와 닮은 웹툰 캐릭터는 누구일까? 사진 한장으로 나와 닮은 웹툰 캐릭터를 찾아봐요! 많은 네이버 인기작 웹툰 캐릭터중 나는 누구와 닮았을지 확인해봐요!">
-    <meta property="og:url" content="https://webtoonface.netlify.app/">
+		<meta
+			name="description"
+			content="나와 닮은 웹툰 캐릭터는 누구일까? 사진 한장으로 나와 닮은 웹툰 캐릭터를 찾아봐요! 많은 네이버 인기작 웹툰 캐릭터중 나는 누구와 닮았을지 확인해봐요!"
+		/>
+
+		<meta property="og:title" content="나와 닮은 웹툰 캐릭터 찾기" />
+		<meta
+			property="og:description"
+			content="나와 닮은 웹툰 캐릭터는 누구일까? 사진 한장으로 나와 닮은 웹툰 캐릭터를 찾아봐요! 많은 네이버 인기작 웹툰 캐릭터중 나는 누구와 닮았을지 확인해봐요!"
+		/>
+		<meta property="og:url" content="https://webtoonface.netlify.app/" />
 		<link rel="stylesheet" href="style.css" />
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
 		<script
@@ -45,10 +51,17 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">나와 닮은 캐릭터</a>
+							<a class="nav-link active" aria-current="page" href="#"
+								>나와 닮은 캐릭터</a
+							>
 						</li>
 						<li class="nav-item active">
-							<a class="nav-link" id="website-top-link "href="https://webtoonface.netlify.app/#">나와 닮은 웹툰 캐릭터</a>
+							<a
+								class="nav-link"
+								id="website-top-link "
+								href="https://webtoonface.netlify.app/#"
+								>나와 닮은 웹툰 캐릭터</a
+							>
 						</li>
 						<li class="nav-item dropdown">
 							<a
