사이트 설명 추가

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 		<title>나와 닮은 웹툰 캐릭터 찾기</title>
 		<meta
 			name="description"
-			content="나와 닮은 웹툰 캐릭터는 누구일까? 사진 한장으로 나와 닮은 웹툰 캐릭터를 찾아봐요! 많은 네이버 인기작 웹툰 캐릭터중 나는 누구와 닮았을지 확인해봐요!"
-		/>
+			content="나와 닮은 웹툰 캐릭터는 누구일까? 사진 한장으로 나와 닮은 웹툰 캐릭터를 찾아봐요! 웹툰 캐릭터 중 나는 누구와 닮았을지 확인해봐요!"
+		>
 
-		<meta property="og:title" content="나와 닮은 웹툰 캐릭터 찾기" />
+		<meta property="og:title" content="나와 닮은 웹툰 캐릭터 찾기">
 		<meta
 			property="og:description"
-			content="나와 닮은 웹툰 캐릭터는 누구일까? 사진 한장으로 나와 닮은 웹툰 캐릭터를 찾아봐요! 인기작 웹툰 캐릭터중 나는 누구와 닮았을지 확인해봐요!"
-		/>
-		<meta property="og:url" content="https://webtoonface.netlify.app/" />
+			content="나와 닮은 웹툰 캐릭터는 누구일까? 사진 한장으로 나와 닮은 웹툰 캐릭터를 찾아봐요! 웹툰 캐릭터 중 나는 누구와 닮았을지 확인해봐요!"
+		>
+		<meta property="og:url" content="https://webtoonface.netlify.app/">
 		<link rel="stylesheet" href="style.css" />
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
 		<script
@@ -349,3 +349,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
  -->
 </html>
+슈퍼스트링우나와 닮은 웹툰 캐릭터는 누구일까?웹툰 캐릭터 중에 나와 닮은 캐릭터가 있을까? 있으면 나의
+닮음꼴 캐릭터는 누구일까? 사진한장으로 어떤 캐릭터와 닮았는지, 얼마나 닮았는지 확인해봐요~! 인기
+웹툰 '여신강림','맘마미안','이태원 클라쓰','외모지상주의','이두나'등 여러 웹툰들에 등장하는 여러
+캐릭터들 중 누구와 닮았는지 확인해봐요~!
