--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-600ef8f0ba7de3f5"
 		></script>
 		<meta name="naver-site-verification" content="027b602b6d12eaf5c33f30f5d7dd32473d3f384b" />
+		<script data-ad-client="ca-pub-5266199973355303" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
 
 	<body>
