--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 		<meta
 			name="description"
 			content="나와 닮은 웹툰 캐릭터는 누구일까? 사진 한장으로 나와 닮은 웹툰 캐릭터를 찾아봐요! 웹툰 캐릭터 중 나는 누구와 닮았을지 확인해봐요!"
-		>
+		/>
 
-		<meta property="og:title" content="나와 닮은 웹툰 캐릭터 찾기">
+		<meta property="og:title" content="나와 닮은 웹툰 캐릭터 찾기" />
 		<meta
 			property="og:description"
 			content="나와 닮은 웹툰 캐릭터는 누구일까? 사진 한장으로 나와 닮은 웹툰 캐릭터를 찾아봐요! 웹툰 캐릭터 중 나는 누구와 닮았을지 확인해봐요!"
-		>
-		<meta property="og:url" content="https://webtoonface.netlify.app/">
+		/>
+		<meta property="og:url" content="https://webtoonface.netlify.app/" />
 		<link rel="stylesheet" href="style.css" />
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
 		<script
@@ -31,7 +31,11 @@
 			src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-600ef8f0ba7de3f5"
 		></script>
 		<meta name="naver-site-verification" content="027b602b6d12eaf5c33f30f5d7dd32473d3f384b" />
-		<script data-ad-client="ca-pub-5266199973355303" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script
+			data-ad-client="ca-pub-5266199973355303"
+			async
+			src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+		></script>
 	</head>
 
 	<body>
@@ -152,6 +156,16 @@
 				</div>
 			</div>
 		</div>
+		<div>
+			<ins
+				class="kakao_ad_area"
+				style="display: none;"
+				data-ad-unit="DAN-CXqXQ908PD1gAJun"
+				data-ad-width="320"
+				data-ad-height="100"
+			></ins>
+		</div>
+		<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 		<div id="webcam-container"></div>
 
 		<div id="disqus_thread"></div>
@@ -349,3 +363,4 @@ The above copyright notice and this permission notice shall be included in all c
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
  -->
+</html>
