--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 				</div>
 			</div>
 		</div>
-		<div>
+		<div class="ad-banner">
 			<ins
 				class="kakao_ad_area"
 				style="display: none;"
