--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	</head>
 
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-light nav-distance">
+		<!-- <nav class="navbar navbar-expand-lg navbar-light nav-distance">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="#">나와 닮은 웹툰 캐릭터</a>
 				<button
@@ -103,7 +103,21 @@
 					</form>
 				</div>
 			</div>
-		</nav>
+		</nav> -->
+		<div>
+			<ins
+				class="kakao_ad_area"
+				style="display: none;"
+				data-ad-unit="DAN-xWfXl31S2fpzEcKy"
+				data-ad-width="728"
+				data-ad-height="90"
+			></ins>
+			<script
+				type="text/javascript"
+				src="//t1.daumcdn.net/kas/static/ba.min.js"
+				async
+			></script>
+		</div>
 		<section class="section">
 			<h1 class="title">나와 닮은 웹툰 캐릭터(여자)</h1>
 			<h2 class="subtitle">나와 닮은 웹툰 여자 캐릭터는?</h2>
