--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				</div>
 			</div>
 		</nav> -->
-		<div>
+		<div class="top-ad-banner">
 			<ins
 				class="kakao_ad_area"
 				style="display: none;"
@@ -112,12 +112,8 @@
 				data-ad-width="728"
 				data-ad-height="90"
 			></ins>
-			<script
-				type="text/javascript"
-				src="//t1.daumcdn.net/kas/static/ba.min.js"
-				async
-			></script>
 		</div>
+		<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 		<section class="section">
 			<h1 class="title">나와 닮은 웹툰 캐릭터(여자)</h1>
 			<h2 class="subtitle">나와 닮은 웹툰 여자 캐릭터는?</h2>
