광고 크기 수정

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
 			async
 			src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
 		></script>
-		<meta name="google-site-verification" content="5HA_Nb5eH8Bk7kN07YGgDdw6uC9wgTu7DIHJmP-O4u4" />
+		<meta
+			name="google-site-verification"
+			content="5HA_Nb5eH8Bk7kN07YGgDdw6uC9wgTu7DIHJmP-O4u4"
+		/>
 	</head>
 
 	<body>
@@ -180,6 +183,7 @@
 		<div id="webcam-container"></div>
 
 		<div id="disqus_thread"></div>
+
 		<script>
 			/**
 			 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -203,6 +207,23 @@
 			>Please enable JavaScript to view the
 			<a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript
 		>
+		
+		
+		
+		<div class="bottom-ad-banner">
+			<ins
+				class="kakao_ad_area"
+				style="display: none;"
+				data-ad-unit="DAN-E8s7GAdiqwFkpwdA"
+				data-ad-width="300"
+				data-ad-height="250"
+			></ins>
+		</div>
+
+		
+		
+		
+		<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 		<!-- Optional JavaScript; choose one of the two! -->
 
 		<!-- Option 1: Bootstrap Bundle with Popper -->
