--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 			name="google-site-verification"
 			content="5HA_Nb5eH8Bk7kN07YGgDdw6uC9wgTu7DIHJmP-O4u4"
 		/>
+		<link rel="canonical" href="http://www.mysite.com/article/article1.html">
 	</head>
 
 	<body>
