--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			name="google-site-verification"
 			content="5HA_Nb5eH8Bk7kN07YGgDdw6uC9wgTu7DIHJmP-O4u4"
 		/>
-		<link rel="canonical" href="http://www.mysite.com/article/article1.html">
+		<link rel="canonical" href="https://webtoonface.netlify.app/" />
 	</head>
 
 	<body>
@@ -208,9 +208,7 @@
 			>Please enable JavaScript to view the
 			<a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript
 		>
-		
-		
-		
+
 		<div class="bottom-ad-banner">
 			<ins
 				class="kakao_ad_area"
@@ -221,9 +219,6 @@
 			></ins>
 		</div>
 
-		
-		
-		
 		<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 		<!-- Optional JavaScript; choose one of the two! -->
 
