--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
 			crossorigin="anonymous"
 		/>
-		<title>나와 닮은 웹툰 캐릭터 찾기</title>
+		<title>나와 닮은 웹툰 캐릭터!</title>
 		<meta
 			name="description"
 			content="나와 닮은 웹툰 캐릭터는 누구일까? 사진 한장으로 나와 닮은 웹툰 캐릭터를 찾아봐요! 웹툰 캐릭터 중 나는 누구와 닮았을지 확인해봐요!"
