--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 			content="5HA_Nb5eH8Bk7kN07YGgDdw6uC9wgTu7DIHJmP-O4u4"
 		/>
 		<link rel="canonical" href="https://webtoonface.netlify.app/" />
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	</head>
 
 	<body>
@@ -125,7 +127,7 @@
 		</section>
 		<section class="youtube">
 			<div class="container mt-5 youtube-cover d-flex flex-row-reverse">
-				<img src="" alt="" class="youtube-icon" />
+				<!-- <img src="" alt="" class="youtube-icon" /> -->
 				<a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="youtube-link">제작 도움: 조코딩 유튜브 채널</a>
 			</div>
 		</section>
