--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 			content="5HA_Nb5eH8Bk7kN07YGgDdw6uC9wgTu7DIHJmP-O4u4"
 		/>
 		<link rel="canonical" href="https://webtoonface.netlify.app/" />
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="/appicon1.ico" type="image/x-icon" />
+		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 	</head>
 
 	<body>
@@ -53,7 +53,7 @@
 					class="navbar-toggler"
 					type="button"
 					data-bs-toggle="collapse"
-					data-bs-target="#navbarSupportedContent"
+					data-bs-target="#navbarSpupportedContent"
 					aria-controls="navbarSupportedContent"
 					aria-expanded="false"
 					aria-label="Toggle navigation"
@@ -128,7 +128,11 @@
 		<section class="youtube">
 			<div class="container mt-5 youtube-cover d-flex flex-row-reverse">
 				<!-- <img src="" alt="" class="youtube-icon" /> -->
-				<a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="youtube-link">제작 도움: 조코딩 유튜브 채널</a>
+				<a
+					href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg"
+					class="youtube-link"
+					>제작 도움: 조코딩 유튜브 채널</a
+				>
 			</div>
 		</section>
 
