--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
 			}
 
 			function removeUpload() {
+				resultimage.setAttribute('src', 'img/questionmark.jpg');
 				$('.file-upload-input').replaceWith($('.file-upload-input').clone());
 				$('.file-upload-content').hide();
 				$('.image-upload-wrap').show();
