--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 		<link rel="canonical" href="https://webtoonface.netlify.app/" />
 		<link rel="shortcut icon" href="/appicon1.ico" type="image/x-icon" />
 		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
+		<meta name="google-site-verification" content="vsCpB_o97SaenJskh0a7CtVSXeLTjFHbdqzoXMRzR4o" />
 	</head>
 
 	<body>
@@ -339,17 +340,17 @@
 					case '나노리스트 나노':
 						WebName = '나노리스트';
 						CharacterName = '나노';
-						result_image = resultimage.setAttribute('src', 'img/photoimage.png');
+						result_image = resultimage.setAttribute('src', 'img/nano.png');
 						break;
 					case '나노리스트 산':
 						WebName = '나노리스트';
 						CharacterName = '산';
-						result_image = resultimage.setAttribute('src', 'img/oroji.jpg');
+						result_image = resultimage.setAttribute('src', 'img/san.jpg');
 						break;
 					case '랜덤채팅의그녀 박하민':
 						WebName = '랜덤채팅의그녀';
 						CharacterName = '박하민';
-						result_image = resultimage.setAttribute('src', 'img/oroji.jpg');
+						result_image = resultimage.setAttribute('src', 'img/bakhamin.jpg');
 						break;
 					case '랜덤채팅의그녀 서리라':
 						WebName = '랜덤채팅의그녀';
