--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			content="나와 닮은 웹툰 캐릭터는 누구일까? 사진 한장으로 나와 닮은 웹툰 캐릭터를 찾아봐요! 웹툰 캐릭터 중 나는 누구와 닮았을지 확인해봐요!"
 		/>
 
-		<meta property="og:title" content="나와 닮은 웹툰 캐릭터 찾기" />
+		<meta property="og:title" content="나와 닮은 웹툰 캐릭터!" />
 		<meta
 			property="og:description"
 			content="나와 닮은 웹툰 캐릭터는 누구일까? 사진 한장으로 나와 닮은 웹툰 캐릭터를 찾아봐요! 웹툰 캐릭터 중 나는 누구와 닮았을지 확인해봐요!"
@@ -43,7 +43,16 @@
 		<link rel="canonical" href="https://webtoonface.netlify.app/" />
 		<link rel="shortcut icon" href="/appicon1.ico" type="image/x-icon" />
 		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
-		<meta name="google-site-verification" content="vsCpB_o97SaenJskh0a7CtVSXeLTjFHbdqzoXMRzR4o" />
+		<meta
+			name="google-site-verification"
+			content="vsCpB_o97SaenJskh0a7CtVSXeLTjFHbdqzoXMRzR4o"
+		/>
+		<!--네이버 웹마스터도구 사이트 구조개선 코드-->
+		<meta name="NaverBot" content="All" />
+		<meta name="NaverBot" content="index,follow" />
+		<meta name="Yeti" content="All" />
+		<meta name="Yeti" content="index,follow" />
+		<!--네이버 웹마스터도구 사이트 구조개선 코드 끝-->
 	</head>
 
 	<body>
@@ -233,8 +242,7 @@
 		</div>
 
 		<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-		
-		
+
 		<div class="bottom-ad-banner2">
 			<ins
 				class="kakao_ad_area"
