유튜브 링크 -> 블로그링크

--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
 			<div class="container mt-5 youtube-cover d-flex flex-row-reverse">
 				<!-- <img src="" alt="" class="youtube-icon" /> -->
 				<a
-					href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg"
+					href="https://developerdk.tistory.com/"
 					class="youtube-link"
-					>제작 도움: 조코딩 유튜브 채널</a
+					>제작 도움: 조코딩</a
 				>
 			</div>
 		</section>
