--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 			<div class="container mt-5 youtube-cover d-flex flex-row-reverse">
 				<!-- <img src="" alt="" class="youtube-icon" /> -->
 				<a
-					href="https://developerdk.tistory.com/"
+					href=""
 					class="youtube-link"
 					>제작 도움: 조코딩</a
 				>
