--- a/index.html
+++ b/index.html
@@ -415,12 +415,12 @@
 						CharacterName = '릴리아';
 						result_image = resultimage.setAttribute('src', 'img/lilia.jpg');
 						break;
-					case '구름이피워낸꽃 홍련';
+					case '구름이피워낸꽃 홍련':
 						WebName = '구름이 피워낸 꽃';
 						CharacterName = '홍련';
 						result_image = resultimage.setAttribute('src', 'img/hongyeon.jpg');
 						break;
-					case '아메리카노엑소더스 아멜';
+					case '아메리카노엑소더스 아멜':
 						WebName = '아메리카노엑소더스';
 						CharacterName = '아멜';
 						result_image = resultimage.setAttribute('src', 'img/amel.jpg');
