캐릭터 추가

--- a/index.html
+++ b/index.html
@@ -396,6 +396,16 @@
 						CharacterName = '한채연';
 						result_image = resultimage.setAttribute('src', 'img/hanchayeon.jpg');
 						break;
+					case '하루만네가되고싶어 메데이아 벨리아르':
+						WebName = '하루만네가되고싶어';
+						CharacterName = '메데이아 벨리아르';
+						result_image = resultimage.setAttribute('src', 'img/medeia_beliare.jpg');
+						break;
+					case '노답소녀 김가빈':
+						WebName = '노답소녀';
+						CharacterName = '김가빈';
+						result_image = resultimage.setAttribute('src', 'img/kimgabin.jpg');
+						break;
 
 					default:
 						WebName = '다시시도해주세요!';
